# opengates-oss

./: .env.example  .gitignore  README.md  pyproject.toml
gates/demo-investor/: examples.md  focus.md  gate.yaml  standards.md  voice.md
src/opengates/: app.py  cli.py  gates.py  runtime.py  schemas.py  settings.py  storage.py
src/opengates/providers/: __init__.py  base.py  factory.py  heuristic.py  openai_responses.py
src/opengates/templates/: index.html  intake.html  result.html  thread.html
tests/: test_runtime.py
